5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1716_2497.log
== TEST (2019-05-09 16:27:52) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo *tempo
	saldo = saldo + rend
	t = rend+t

print(round(t, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:28:07) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = saldo *tempo
	saldo = saldo + rend
	t = rend+t

print(round(t, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:28:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = saldo *tempo
	saldo = saldo + rend
	t = rend+t

print(round(t, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:29:19) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = saldo *tempo
	saldo = saldo + rend
	t = rend+t

   print(round(t, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 19
    print(round(t, 2)) # Exibicao de resultados
                                              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:29:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = saldo *tempo
	saldo = saldo + rend
	t += rend
   print(round(t, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 18
    print(round(t, 2)) # Exibicao de resultados
                                              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:29:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = saldo *tempo
	saldo = saldo + rend
	t += rend
	print(round(t, 2)) # Exibicao de resultados
	

-- OUTPUT:
3451.5
27612.0
196735.5
1380600.0
9667651.5
67677012.0
473742535.5
3316201200.0
23213411851.5
162493886412.0
1137457208335.5
7962200461800.0
55735403236051.5
390147822655812.0
2731034758594135.5
1.91172433101624e+16
1.3382070317114026e+17
9.367449221979852e+17
6.5572144553859e+18
4.590050118770131e+19
3.2130350831390917e+20
2.249124558197364e+21
1.5743871907381549e+22
1.1020710335167084e+23
7.714497234616958e+23
5.40014806423187e+24
3.7801036449623095e+25
2.6460725514736165e+26
1.8522507860315316e+27
1.296575550222072e+28
9.076028851554506e+28
6.353220196088154e+29
4.447254137261708e+30
3.1130778960831954e+31
2.1791545272582368e+32
1.5254081690807657e+33
1.067785718356536e+34
7.474500028495752e+34
5.232150019947026e+35
3.662505013962918e+36
2.5637535097740426e+37
1.7946274568418296e+38
1.2562392197892807e+39
8.793674538524964e+39
6.155572176967474e+40
4.308900523877232e+41
3.0162303667140624e+42
2.1113612566998436e+43
1.4779528796898904e+44
1.0345670157829234e+45
7.241969110480463e+45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:30:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = saldo *tempo
	saldo = saldo + rend
	t += rend
	print(round(t, 2)) # Exibicao de resultados
	

-- OUTPUT:
3451.5
27612.0
196735.5
1380600.0
9667651.5
67677012.0
473742535.5
3316201200.0
23213411851.5
162493886412.0
1137457208335.5
7962200461800.0
55735403236051.5
390147822655812.0
2731034758594135.5
1.91172433101624e+16
1.3382070317114026e+17
9.367449221979852e+17
6.5572144553859e+18
4.590050118770131e+19
3.2130350831390917e+20
2.249124558197364e+21
1.5743871907381549e+22
1.1020710335167084e+23
7.714497234616958e+23
5.40014806423187e+24
3.7801036449623095e+25
2.6460725514736165e+26
1.8522507860315316e+27
1.296575550222072e+28
9.076028851554506e+28
6.353220196088154e+29
4.447254137261708e+30
3.1130778960831954e+31
2.1791545272582368e+32
1.5254081690807657e+33
1.067785718356536e+34
7.474500028495752e+34
5.232150019947026e+35
3.662505013962918e+36
2.5637535097740426e+37
1.7946274568418296e+38
1.2562392197892807e+39
8.793674538524964e+39
6.155572176967474e+40
4.308900523877232e+41
3.0162303667140624e+42
2.1113612566998436e+43
1.4779528796898904e+44
1.0345670157829234e+45
7.241969110480463e+45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:31:06) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = saldo*tempo
	saldo = saldo + rend
	t += rend
	print(round(t, 2)) # Exibicao de resultados
	

-- OUTPUT:
3451.5
27612.0
196735.5
1380600.0
9667651.5
67677012.0
473742535.5
3316201200.0
23213411851.5
162493886412.0
1137457208335.5
7962200461800.0
55735403236051.5
390147822655812.0
2731034758594135.5
1.91172433101624e+16
1.3382070317114026e+17
9.367449221979852e+17
6.5572144553859e+18
4.590050118770131e+19
3.2130350831390917e+20
2.249124558197364e+21
1.5743871907381549e+22
1.1020710335167084e+23
7.714497234616958e+23
5.40014806423187e+24
3.7801036449623095e+25
2.6460725514736165e+26
1.8522507860315316e+27
1.296575550222072e+28
9.076028851554506e+28
6.353220196088154e+29
4.447254137261708e+30
3.1130778960831954e+31
2.1791545272582368e+32
1.5254081690807657e+33
1.067785718356536e+34
7.474500028495752e+34
5.232150019947026e+35
3.662505013962918e+36
2.5637535097740426e+37
1.7946274568418296e+38
1.2562392197892807e+39
8.793674538524964e+39
6.155572176967474e+40
4.308900523877232e+41
3.0162303667140624e+42
2.1113612566998436e+43
1.4779528796898904e+44
1.0345670157829234e+45
7.241969110480463e+45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:31:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = saldo*tempo
	saldo = saldo + rend
	t += rend
print(round(t, 2)) # Exibicao de resultados
	

-- OUTPUT:
3451.5
27612.0
196735.5
1380600.0
9667651.5
67677012.0
473742535.5
3316201200.0
23213411851.5
162493886412.0
1137457208335.5
7962200461800.0
55735403236051.5
390147822655812.0
2731034758594135.5
1.91172433101624e+16
1.3382070317114026e+17
9.367449221979852e+17
6.5572144553859e+18
4.590050118770131e+19
3.2130350831390917e+20
2.249124558197364e+21
1.5743871907381549e+22
1.1020710335167084e+23
7.714497234616958e+23
5.40014806423187e+24
3.7801036449623095e+25
2.6460725514736165e+26
1.8522507860315316e+27
1.296575550222072e+28
9.076028851554506e+28
6.353220196088154e+29
4.447254137261708e+30
3.1130778960831954e+31
2.1791545272582368e+32
1.5254081690807657e+33
1.067785718356536e+34
7.474500028495752e+34
5.232150019947026e+35
3.662505013962918e+36
2.5637535097740426e+37
1.7946274568418296e+38
1.2562392197892807e+39
8.793674538524964e+39
6.155572176967474e+40
4.308900523877232e+41
3.0162303667140624e+42
2.1113612566998436e+43
1.4779528796898904e+44
1.0345670157829234e+45
7.241969110480463e+45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:32:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = saldo*juros
	saldo = saldo + rend
	t += rend
print(round(t, 2)) # Exibicao de resultados
	

-- OUTPUT:
3451.5
27612.0
196735.5
1380600.0
9667651.5
67677012.0
473742535.5
3316201200.0
23213411851.5
162493886412.0
1137457208335.5
7962200461800.0
55735403236051.5
390147822655812.0
2731034758594135.5
1.91172433101624e+16
1.3382070317114026e+17
9.367449221979852e+17
6.5572144553859e+18
4.590050118770131e+19
3.2130350831390917e+20
2.249124558197364e+21
1.5743871907381549e+22
1.1020710335167084e+23
7.714497234616958e+23
5.40014806423187e+24
3.7801036449623095e+25
2.6460725514736165e+26
1.8522507860315316e+27
1.296575550222072e+28
9.076028851554506e+28
6.353220196088154e+29
4.447254137261708e+30
3.1130778960831954e+31
2.1791545272582368e+32
1.5254081690807657e+33
1.067785718356536e+34
7.474500028495752e+34
5.232150019947026e+35
3.662505013962918e+36
2.5637535097740426e+37
1.7946274568418296e+38
1.2562392197892807e+39
8.793674538524964e+39
6.155572176967474e+40
4.308900523877232e+41
3.0162303667140624e+42
2.1113612566998436e+43
1.4779528796898904e+44
1.0345670157829234e+45
7.241969110480463e+45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:32:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = saldo+(juros*tempo)
	saldo = saldo + rend
	t += rend
print(round(t, 2)) # Exibicao de resultados
	

-- OUTPUT:
3451.5
27612.0
196735.5
1380600.0
9667651.5
67677012.0
473742535.5
3316201200.0
23213411851.5
162493886412.0
1137457208335.5
7962200461800.0
55735403236051.5
390147822655812.0
2731034758594135.5
1.91172433101624e+16
1.3382070317114026e+17
9.367449221979852e+17
6.5572144553859e+18
4.590050118770131e+19
3.2130350831390917e+20
2.249124558197364e+21
1.5743871907381549e+22
1.1020710335167084e+23
7.714497234616958e+23
5.40014806423187e+24
3.7801036449623095e+25
2.6460725514736165e+26
1.8522507860315316e+27
1.296575550222072e+28
9.076028851554506e+28
6.353220196088154e+29
4.447254137261708e+30
3.1130778960831954e+31
2.1791545272582368e+32
1.5254081690807657e+33
1.067785718356536e+34
7.474500028495752e+34
5.232150019947026e+35
3.662505013962918e+36
2.5637535097740426e+37
1.7946274568418296e+38
1.2562392197892807e+39
8.793674538524964e+39
6.155572176967474e+40
4.308900523877232e+41
3.0162303667140624e+42
2.1113612566998436e+43
1.4779528796898904e+44
1.0345670157829234e+45
7.241969110480463e+45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:32:55) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = saldo*(juros*tempo)
	saldo = saldo + rend
	t += rend
print(round(t, 2)) # Exibicao de resultados
	

-- OUTPUT:
3451.5
27612.0
196735.5
1380600.0
9667651.5
67677012.0
473742535.5
3316201200.0
23213411851.5
162493886412.0
1137457208335.5
7962200461800.0
55735403236051.5
390147822655812.0
2731034758594135.5
1.91172433101624e+16
1.3382070317114026e+17
9.367449221979852e+17
6.5572144553859e+18
4.590050118770131e+19
3.2130350831390917e+20
2.249124558197364e+21
1.5743871907381549e+22
1.1020710335167084e+23
7.714497234616958e+23
5.40014806423187e+24
3.7801036449623095e+25
2.6460725514736165e+26
1.8522507860315316e+27
1.296575550222072e+28
9.076028851554506e+28
6.353220196088154e+29
4.447254137261708e+30
3.1130778960831954e+31
2.1791545272582368e+32
1.5254081690807657e+33
1.067785718356536e+34
7.474500028495752e+34
5.232150019947026e+35
3.662505013962918e+36
2.5637535097740426e+37
1.7946274568418296e+38
1.2562392197892807e+39
8.793674538524964e+39
6.155572176967474e+40
4.308900523877232e+41
3.0162303667140624e+42
2.1113612566998436e+43
1.4779528796898904e+44
1.0345670157829234e+45
7.241969110480463e+45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:33:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = saldo*(juros*tempo)
	saldo = saldo + rend
	t += rend
	print(round(t, 2)) # Exibicao de resultados
	

-- OUTPUT:
13806.0
358956.0
8987706.0
224706456.0
5617675206.0
140441893956.0
3511047362706.0
87776184081456.0
2194404602050206.0
5.486011505126896e+16
1.3715028762817377e+18
3.4287571907043463e+19
8.571892976760867e+20
2.1429732441902167e+22
5.357433110475542e+23
1.3393582776188856e+25
3.348395694047214e+26
8.370989235118036e+27
2.092747308779509e+29
5.231868271948773e+30
1.3079670679871932e+32
3.2699176699679834e+33
8.174794174919959e+34
2.04369854372999e+36
5.109246359324975e+37
1.2773115898312438e+39
3.193278974578109e+40
7.983197436445273e+41
1.9957993591113182e+43
4.989498397778296e+44
1.247374599444574e+46
3.1184364986114347e+47
7.796091246528587e+48
1.9490228116321467e+50
4.872557029080367e+51
1.2181392572700918e+53
3.0453481431752293e+54
7.613370357938072e+55
1.903342589484518e+57
4.7583564737112947e+58
1.1895891184278238e+60
2.97397279606956e+61
7.4349319901739e+62
1.858732997543475e+64
4.646832493858687e+65
1.1617081234646716e+67
2.9042703086616787e+68
7.260675771654198e+69
1.815168942
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:33) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = saldo*(juros*tempo)
	saldo = saldo + rend
	 x = saldo + sald
print(round( x, 2)) # Exibicao de resultados
	

-- ERROR:
File "XXXX", line 17
    x = saldo + sald
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:45) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = saldo*(juros*tempo)
	saldo = saldo + rend
	x = saldo + sald
print(round( x, 2)) # Exibicao de resultados
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    rend = saldo*(juros*tempo)
NameError: name 'saldo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:44:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = (sald*juros)/100
	saldo = saldo + rend
	t+=saldo
print(round( x, 2)) # Exibicao de resultados
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    saldo = saldo + rend
NameError: name 'saldo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:45:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = (sald*juros)/100
	saldo = saldo  + rend
	t += saldo
print(round( x, 2)) # Exibicao de resultados
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    saldo = saldo  + rend
NameError: name 'saldo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:46:02) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = saldo *tempo
	saldo = saldo + rend
	t += rend
	print(round(t, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
947.414
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:46:02) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = saldo *tempo
	saldo = saldo + rend
	t += rend
	print(round(t, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
947.431
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:46:22) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t += saldo
print(round( x, 2)) # Exibicao de resultados
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    saldo = saldo  + rend
NameError: name 'saldo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:46:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t += saldo
print(round( x, 2)) # Exibicao de resultados
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    saldo = saldo  + rend
NameError: name 'saldo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:46:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t += saldo
	
print(round( x, 2)) # Exibicao de resultados
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    saldo = saldo  + rend
NameError: name 'saldo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:47:26) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (n>1):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t += saldo
	
print(round( t, 2)) # Exibicao de resultados
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (n>1):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:47:43) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t += saldo
	
print(round( t, 2)) # Exibicao de resultados
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (n>1):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:48:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t += saldo
	
print(round( saldo, 2)) # Exibicao de resultados
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (n>1):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:48:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t += saldo
	
	print(round( saldo, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:48:58) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t = saldo
	print(round( saldo, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:52:22) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1+t):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t = saldo
	print(round( saldo, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:52:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1+t):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t = saldo
	print(round( saldo, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:52:57) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1+t):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t = saldo
print(round( saldo, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:53:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1+t):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t = saldo
print(round( saldo, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
0.281253
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:53:08) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1+t):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t = saldo
print(round( saldo, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:53:22) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1+t):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t += saldo
print(round( saldo, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:53:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1+t):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t += saldo
	print(round( saldo, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:55:45) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1+t):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t += saldo
	print(round( saldo, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:56:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1+t):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t += saldo
	print(round(saldo, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
0.219302
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:56:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1+t):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t += saldo
	print(round(saldo, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:56:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1+t):
	rend = (sald*juros)/100
	saldo = sald  + rend
	print(round(saldo, 2)) # Exibicao de resultados
	t += saldo

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:58:22) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>1+t):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t += 1
	print(round(saldo, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:00:14) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo)
	rend = (sald*juros)/100
	saldo = sald  + rend
	t += 1
	print(round(saldo, 2)) # Exibicao de resultados
	

-- ERROR:
File "XXXX", line 14
    while (t!=tempo)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:00:19) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = (sald*juros)/100
	saldo = sald  + rend
	t += 1
	print(round(saldo, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
598.26
598.26
598.26
598.26
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:01:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:01:12) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
0.175623
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:06:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:06:52) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
0.464769
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:06:52) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:06:53) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
0.461733
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
Quantia inicial: Tempo de investimento: 858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
Quantia inicial: Tempo de investimento: 1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:06:55) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
0.575621
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:09:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:09:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
0.5043
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
Quantia inicial: Tempo de investimento: 858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
Quantia inicial: Tempo de investimento: 1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:09:26) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
0.455863
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:10:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:10:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:10:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
0.864725
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:10:52) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
0.865133
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:10:57) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
14.6737
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:

-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:10:57) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi>0):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
266.384
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 11:59:59) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
0.194638
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:28:38) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:07:07) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
0.0991068
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:54:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
sald = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = (sald*juros)/100
	sald = sald  + rend
	t += 1
	print(round(sald, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
